--- a/package.json
+++ b/package.json
@@ -7,26 +7,19 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
-    "@mui/x-charts": "^6.18.4",
-    "@mui/x-data-grid": "^6.18.6",
-    "@mui/x-date-pickers": "^6.18.6",
-    "@reduxjs/toolkit": "^2.0.1",
+    "@mui/x-data-grid": "^7.13.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
-    "dayjs": "^1.11.10",
     "react": "^18.2.0",
-    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "react-redux": "^9.0.1",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
-    "redux-persist": "^6.0.0",
     "sass": "^1.69.7",
     "scss": "^0.2.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
